@@ -1,7 +1,33 @@
-package org.tsalko.uniquisubstring;
+package org.tsalko.leetcode;
 
 import java.util.*;
 
+/**
+ * Merge Intervals
+ * <p>
+ * Given an array of intervals where intervals[i] = [starti, endi], merge all overlapping intervals, and return an array of the non-overlapping intervals that cover all the intervals in the input.
+ * <p>
+ * Example 1:
+ * Input: intervals = [[1,3],[2,6],[8,10],[15,18]]
+ * Output: [[1,6],[8,10],[15,18]]
+ * Explanation: Since intervals [1,3] and [2,6] overlap, merge them into [1,6].
+ * <p>
+ * Example 2:
+ * Input: intervals = [[1,4],[4,5]]
+ * Output: [[1,5]]
+ * Explanation: Intervals [1,4] and [4,5] are considered overlapping.
+ * <p>
+ * Example 3:
+ * Input: intervals = [[4,7],[1,4]]
+ * Output: [[1,7]]
+ * Explanation: Intervals [1,4] and [4,7] are considered overlapping.
+ * <p>
+ * Constraints:
+ * <p>
+ * 1 <= intervals.length <= 104
+ * intervals[i].length == 2
+ * 0 <= starti <= endi <= 104
+ */
 public class LeetCode056_MergeIntervals {
 
     public static final int MAX = 10000;
@@ -18,7 +44,7 @@ public class LeetCode056_MergeIntervals {
 
         for (int i = 1; i < sorted.length; i++) {
             int[] current = sorted[i];
-            int[] lastResult = result.get(result.size() - 1);
+            int[] lastResult = result.getLast();
             if (current[0] <= lastResult[1]) {
                 lastResult[1] = Math.max(current[1], lastResult[1]);
             } else {
